2010-09-21
 * allow users to specify minimal length for expression format

2010-09-11
 * moved Target to rts2db namespace, and some associated namespace changes

2010-08-18
 * constraints support (.xsd and .xml for constraint files..)

2010-08-04
 * boolean array support

2010-07-15
 * support for multiple extension images (on client side)

2010-07-11
 * BOP_WAIT_TRIG, BOP_WILL_EXPOSE and related machinery

2010-06-12
 * Camera filter focusing offsets

2010-05-06
 * Change in B (BOP) message (central server comm) - adds server state

2010-03-21
 * Big Brother support (configuration entry in events.xsd, support in xmlrpcd)

2010-03-20
 * Various other FLI improvements. You will need to use FLI library from RTS2 repository.
 * FLI uses reported serial numbers
 * Modified flat strategy

2010-03-19
 * entry page with list of requests available on the server

2010-03-16
 * added javascript date selection
 * removed wcs directory

0.8.0-1
=====

2010-03-15
 * 0.8.0-1 released
 * various fixes to compilation process
 * fix to calibration target

0.8.0
=====

2010-03-07
 * 0.8.0 released

2010-02-25
 * added lib directory
 * camera experimetal shared memory transport

2010-02-20
 * Replaced SOAP library with own simple Simbad support

2010-02-17
 * HTTP client support, -u option for rts2-xmlrclient

2010-02-16
 * added centraldN_ variables to commands excuted from XMLRPCD

2010-02-06
 * Support for MI CCD devices
 * Added exposure_end notification to script being executed

2010-01-31
 * Flats are set with now - mitigate waiting for script ends

2010-01-30
 * Time diff is editable in rts2-mon with selection box (for selecting for how long in future should new time be)

2010-01-18
 * MPEC target field for telescope - telescope is able to calculate solar system bodies orbits

2009-12-05
 * add W for writeable values, edit only writable values

0.7.5
=====

2009-11-29
 * added gbm_enabled_above_error grbd parameter

2009-11-07
 * Added ROOT config check, rts2-fit-focus
