@@ -23,6 +23,8 @@ GRANT ALL ON plan TO GROUP observers;
 GRANT ALL ON props TO GROUP observers;
 GRANT ALL ON filters TO GROUP observers;
 GRANT ALL ON calibration_observation TO GROUP observers;
+GRANT ALL ON labels TO GROUP observers;
+GRANT ALL ON target_labels TO GROUP observers;
 GRANT SELECT,UPDATE ON obs_id TO GROUP observers;
 GRANT SELECT,UPDATE ON img_id TO GROUP observers;
 GRANT SELECT,UPDATE ON med_id TO GROUP observers;
@@ -32,6 +34,7 @@ GRANT SELECT,UPDATE ON plan_id TO GROUP observers;
 GRANT SELECT,UPDATE ON prop_id TO GROUP observers;
 GRANT SELECT,UPDATE ON grb_tar_id TO GROUP observers;
 GRANT SELECT,UPDATE ON point_id TO GROUP observers;
+GRANT SELECT,UPDATE ON label_id TO GROUP observers;
 GRANT SELECT ON images_nights TO GROUP observers;
 GRANT SELECT ON observations_nights TO GROUP observers;
 GRANT ALL ON images TO GROUP observers;
