@@ -1,15 +1,14 @@
 alter table users add column usr_execute_permission boolean not null default false;
 
-create table pi (
-	pi_id		integer PRIMARY KEY,
-	pi_name		varchar(250) NOT NULL
+create table labels (
+	label_id	integer PRIMARY KEY,
+	label_type	integer,
+	label_text	varchar(500) NOT NULL
 );
 
-create table programs (
-	program_id	integer PRIMARY KEY,
-	program_name	varchar(250) NOT NULL
+create table target_labels (
+	tar_id		integer REFERENCES targets(tar_id),
+	label_id	integer REFERENCES labels(label_id)
 );
 
-alter table targets add column pi_id integer REFERENCES pi(pi_id);
-
-alter table targets add column program_id integer REFERENCES programs(program_id);
+create sequence label_id start WITH 1;
