@@ -1,3 +1,6 @@
+2010-09-24
+ * add PI and program name (as labels)
+
 2010-09-21
  * allow users to specify minimal length for expression format
 
